--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,10 +16,10 @@
     -fx-border-width:2;
     //
     -fx-position: relative;
-    -fx-animation: mymove 5s infinite;
+    -fx-animation: move 5s infinite;
 }
-//
-@keyframes mymove{
+
+@keyframes move{
 from {left: 0px;}
 to  {left:200px;}
 }
